# asset_placer_eval_standalone

./: .gitignore  AGENTS.md  README.md  pyproject.toml
docs/: 20260225-controlled-perturbation-stress-test-policy-vs-github.md  20260225-smc-implementation-policy-vs-github.md  20260226_current_issues_refine_and_geometry.md  20260226_heuristic_refine_algorithm_and_results.md  20260226_stress_implementation_bottleneck_occlusion_clutter.md  20260228_current_issues_summary.md  20260228_implementation_plan_phase1.md  20260228_next_actions_eval_v1_stress_refine.md  20260228_phase1_implementation_report.md  20260302_eval_v1_parameter_rationale.md  20260302_gemini_openings_refine_update_report.md  20260302_openings_step3_eval_refresh_report.md  20260302_refine_methods_implementation_summary.md  20260302_stress_eval_v1_clrfeasible_results.md  20260303_experiment_conditions_metrics_results.md  20260308_two_week_implementation_plan.md  20260309_eval_v1_freeze_checklist.md  20260311_eval_v1_freeze_implementation_report.md  20260311_stress_v2_natural_implementation_policy.md  20260312_canonical_brief.md  20260312_clutter_assisted_recovery_extension_plan.md  20260312_clutter_recovery_complete_spec.md  20260312_clutter_rotation_extension_results.md  20260312_frozen_latest_design_refine_compare.md  20260312_latest_design_config_freeze.md  20260312_layout_axis_alignment_major_gain_exception_policy.md  20260312_layout_axis_alignment_policy.md  20260312_layout_axis_alignment_prior_policy.md  20260312_m0_m1_x1_x2_clutter_recovery_policy.md  20260312_paper_draft.md  (+25 more)
experiments/: README.md
(+183 files in other folders)
